syntax = "proto3";

package package_two;

message PackageTwoResponse {
    uint32 id = 1;
    string description = 2;
}
