syntax = "proto3";

package simple;

service SimpleService {
    rpc SimpleCall (SimpleRequest) returns (SimpleResponse);
}

message SimpleRequest {
    uint32 id = 1;
    optional string title = 2;
}

message SimpleResponse {
    uint32 id = 1;
}
